--- a/src/app/logs-table/logs-table.component.css
+++ b/src/app/logs-table/logs-table.component.css
@@ -8,7 +8,7 @@
 
 .mat-column-created_date{
   flex: 0 0 33% !important;
-  min-width: 70px !important;
+  min-width: 100px !important;
   max-width: 100px !important;
 }
 
